# card-receipt-ocr

./: .gitignore  Cargo.toml  Trunk.toml  index.html  rust-toolchain
.github/workflows/: pages.yml  rust.yml  web.yml
LICENSES/: LicenseRef-SourceHanSans-OFL.txt  MIT.txt
js/: font_loader.js  ocr_bridge.js
src/: app.rs  expense.rs  fonts.rs  main.rs  model.rs  ocr.rs  parser.rs  pdf_export.rs  table.rs  web_download.rs
web_fonts/: SourceHanSansVF-remapped.otf.license
